--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="container">
 
     <div class="header">
-        <img src="image/wall7.jpg" alt="Profile Picture">
+        <img src="/images/wall7.jpg" alt="Profile Picture">
+
 
         <h1>
             MAIMOONA ZEHRA
