--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ p{
     <div class="container">
 
     <div class="header">
-        <img src="/images/wall7.jpg" alt="Profile Picture">
+        <img src="images/wall7.jpg" alt="Profile Picture">
 
 
         <h1>
