--- a/index.html
+++ b/index.html
@@ -144,6 +144,10 @@ p{
     </div>
 
 </div>
+    <div>
+        <script src="script.js?v=1.0"></script>
+
+    </div>
 <script src="script.js"></script>
 </body>
 </html>
